--- a/app/src/main/res/layout/activity_clock.xml
+++ b/app/src/main/res/layout/activity_clock.xml
@@ -6,4 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".ClockActivity">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clock"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintDimensionRatio="1">
+
+        <ImageView
+            android:id="@+id/clock_face"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/clock_face"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="191dp" />
+
+        <ImageView
+            android:id="@+id/sad_andriod"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:layout_constraintCircle="@+id/clock_face"
+            app:layout_constraintCircleAngle="210"
+            app:layout_constraintCircleRadius="155dp"
+            app:srcCompat="@drawable/sad_andriod"
+            tools:layout_editor_absoluteX="121dp"
+            tools:layout_editor_absoluteY="325dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
